--- a/tasks/4. Подключение API.md
+++ b/tasks/4. Подключение API.md
@@ -19,3 +19,35 @@
 При реализации можно использовать уже готовый API (например, из [этого списка](https://github.com/public-apis/public-apis)).
 
 Либо можно реализовать собственный API, соответствующий вёрстке из [задания 2](/tasks/2.%20Вёрстка.md) (+ 5 баллов).
+
+
+// Функция для получения цитат из Breaking Bad
+async function getQuotes(number) {
+  // Указываем URL с параметром числа цитат
+  const url = `https://api.breakingbadquotes.xyz/v1/quotes/${number}`;
+
+  try {
+    // Делаем GET-запрос с использованием fetch
+    const response = await fetch(url);
+    
+    // Проверяем, успешно ли выполнен запрос
+    if (!response.ok) {
+      throw new Error(`Ошибка HTTP: ${response.status}`);
+    }
+    
+    // Преобразуем ответ в формат JSON
+    const quotes = await response.json();
+    
+    // Выводим полученные цитаты в консоль
+    console.log(quotes);
+
+    // Возвращаем массив цитат
+    return quotes;
+  } catch (error) {
+    // Обрабатываем возможные ошибки
+    console.error('Ошибка при получении цитат:', error);
+  }
+}
+
+// Пример вызова функции
+getQuotes(5);  // Запрашиваем 5 цитат
